--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,13 @@
 ---
 import Layout from '@/layouts/Layout.astro';
 import HeroSection from '@/sections/HeroSection.astro';
+import HowItWorksSection from '@/sections/HowItWorksSection.astro';
 import '../styles/global.css';
 ---
 
 <Layout title="Food Flow">
   <main class="min-h-screen">
     <HeroSection />
+    <HowItWorksSection />
   </main>
 </Layout>
