--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from '@/layouts/Layout.astro';
+import FeaturesSection from '@/sections/FeaturesSection.astro';
 import HeroSection from '@/sections/HeroSection.astro';
 import HowItWorksSection from '@/sections/HowItWorksSection.astro';
 import '../styles/global.css';
@@ -9,5 +10,6 @@ import '../styles/global.css';
   <main class="min-h-screen">
     <HeroSection />
     <HowItWorksSection />
+    <FeaturesSection />
   </main>
 </Layout>
