--- a/src/sections/HeroSection.astro
+++ b/src/sections/HeroSection.astro
@@ -8,7 +8,7 @@ import DecorativeDots from '@/components/decorations/DecorativeDots.astro';
 import Sparkles from '@/components/decorations/Sparkles.astro';
 ---
 
-<div class="relative flex min-h-screen flex-col lg:flex-row">
+<main class="relative flex min-h-screen flex-col lg:flex-row">
   <section
     class="relative z-10 flex min-h-[60vh] flex-1 flex-col justify-center bg-gradient-to-br from-[hsl(100,65%,40%)] to-[hsl(120,50%,30%)] px-6 py-10 sm:px-8 md:px-16 lg:min-h-screen lg:px-20"
     aria-label="Hero content"
@@ -70,4 +70,4 @@ import Sparkles from '@/components/decorations/Sparkles.astro';
     variant="green"
     class="pointer-events-none absolute bottom-0 right-0 hidden h-16 w-16 xs:block sm:h-20 sm:w-20 md:h-24 md:w-24"
   />
-</div>
+</main>
