--- a/src/components/decorations/GreenCurves.astro
+++ b/src/components/decorations/GreenCurves.astro
@@ -7,7 +7,7 @@ const { class: className, ...rest } = Astro.props;
 ---
 
 <svg
-  class:list={className}
+  class:list={className ?? []}
   width="120"
   height="100"
   viewBox="0 0 120 100"
