--- a/src/components/decorations/Sparkles.astro
+++ b/src/components/decorations/Sparkles.astro
@@ -7,7 +7,7 @@ const { class: className, ...rest } = Astro.props;
 ---
 
 <svg
-  class:list={className}
+  class:list={className ?? []}
   xmlns="http://www.w3.org/2000/svg"
   width="24"
   height="24"
