--- a/src/components/decorations/YellowCurves.astro
+++ b/src/components/decorations/YellowCurves.astro
@@ -7,7 +7,7 @@ const { class: className, ...rest } = Astro.props;
 ---
 
 <svg
-  class:list={className}
+  class:list={className ?? []}
   width="80"
   height="60"
   viewBox="0 0 80 60"
